--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+/src/main/resources/database/database.db
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
