--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 target/
-/src/main/resources/database/database.db
+/database.db
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
