--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 spring.jpa.database-platform=com.springboot.sqlite.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.url = jdbc:sqlite:src/main/resources/database/database.db
+spring.datasource.url = jdbc:sqlite:database.db
 spring.datasource.driver-class-name = org.sqlite.JDBC
 
 spring.datasource.username = admin
