--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -8,3 +8,8 @@ spring:
   datasource:
     url: jdbc:sqlite:database/database.sqlite
     drive-class-name: org.sqlite.JDBC
+
+  servlet:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 2MB
